--- a/www/index.html
+++ b/www/index.html
@@ -31,6 +31,12 @@
     <script src="js/constants.js"></script>
     <script src="lib/tagcanvas.js"></script>
     <script src="js/tagcloud/tagcloud.js"></script>
+    <script src="js/keyword/keywordIndexController.js"></script>
+    <script src="js/keyword/keywordIndexService.js"></script>
+    <script src="js/keyword-detail/keywordDetailController.js"></script>
+    <script src="js/keyword-detail/keywordDetailService.js"></script>
+    <script src="js/setting/settingController.js"></script>
+    <script src="js/find/findController.js"></script>
     <script src='http://webapi.amap.com/maps?v=1.3&key=15bb397de12d7b9a21c683df95bdf24b'></script>
 </head>
 <body ng-app="starter" >
@@ -46,7 +52,7 @@
 
 <ion-nav-view></ion-nav-view>
 <script id="splash.html" type="text/ng-template">
-    <ion-view hide-nav-bar="true" >
+    <ion-view hide-nav-bar="false" >
         <ion-content has-header="false">
             <ion-slide-box pager-click="navSlide(index)" on-slide-changed="slideChanged(index)">
                 <ion-slide>
